--- a/src/Service1/appsettings.json
+++ b/src/Service1/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConsulOptions": {
     "Host": "http://localhost:8500",
-    "ServiceName": "TestService1",
+    "ServiceName": "category-serv",
     "Enabled": true
   }
 }
